css: optically centered counter

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ img {
 
 #decimals {
   margin-top: 12px;
+  padding-bottom: 24px;;
   font-weight: normal;
   color: #6A6A6A;
   letter-spacing: -0.25px;
